dark mode bug
test

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 
 @layer base {
     body {
-        @apply max-w-2xl mx-auto px-4
-    }
+        @apply max-w-2xl mx-auto px-4;
+        /* @apply dark:bg-blue bg:yellow */
+        }
 }
